new proj/src/objects/GE_HQ_Integration_Activity__c.object
<CustomObject>
    <description>This object will be used to track all inbound and outbound integration activity that occurs providing additional visibility, granularity and reporting capabilities.</description>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integration Activities</relationshipLabel>
        <relationshipName>Integration_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Integration Activities</relationshipLabel>
        <relationshipName>Integration_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Data_Flow__c</fullName>
        <label>Data Flow</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Instal_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Base</label>
        <referenceTo>GE_Installed_Base__c</referenceTo>
        <relationshipLabel>Integration Activities</relationshipLabel>
        <relationshipName>Integration_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Lgy_Rec_ID__c</fullName>
        <label>Legacy Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Lst_Updt_Dt__c</fullName>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Integration Activities</relationshipLabel>
        <relationshipName>Integration_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Record_Desc__c</fullName>
        <label>Record Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Request_Type_ES__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to track records that come from the Request Type ES Object</description>
        <label>Request Type (ES)</label>
        <referenceTo>GE_ES_Request_Type__c</referenceTo>
        <relationshipLabel>Integration Activities</relationshipLabel>
        <relationshipName>Integration_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Sbt_Rcrd_ID__c</fullName>
        <label>Submitted Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Source_Sys__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Status_Dtl__c</fullName>
        <label>Status Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Submit_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Submit_Dt__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Target_Sys__c</fullName>
        <label>Target System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Activity</label>
    <nameField>
        <label>Integration Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>